Fix profile page spacing and border radius

--- a/apps/front/src/app/profile/profile.component.scss
+++ b/apps/front/src/app/profile/profile.component.scss
@@ -13,7 +13,7 @@ a {
 }
 
 .avatar {
-  border-radius: 50px;
+  border-radius: 100px;
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
